--- a/.eslintrc
+++ b/.eslintrc
@@ -15,7 +15,14 @@
   },
   "plugins": ["react", "prettier", "@typescript-eslint"],
   "rules": {
-    "react/jsx-filename-extension": 0
+    "react/jsx-filename-extension": 0,
+    "@typescript-eslint/explicit-module-boundary-types": "off",
+    "@typescript-eslint/no-unsafe-member-access": "off",
+    "@typescript-eslint/no-unsafe-call": "off",
+    "@typescript-eslint/restrict-template-expressions": "off",
+    "@typescript-eslint/no-floating-promises": "off",
+    "@typescript-eslint/no-unsafe-assignment": "off",
+    "@typescript-eslint/no-unnecessary-condition": "off"
   },
   "settings": {
     "react": {
