--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "@testing-library/user-event": "^13.1.9",
     "@types/jest": "^26.0.15",
     "@types/node": "^15.12.2",
-    "@types/react": "^17.0.0",
+    "@types/react": "^17.0.11",
     "@types/react-dom": "^17.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -28,6 +28,7 @@
     "prepare": "husky install"
   },
   "devDependencies": {
+    "@types/three": "^0.129.1",
     "@typescript-eslint/eslint-plugin": "^4.27.0",
     "@typescript-eslint/parser": "^4.27.0",
     "eslint": "^7.28.0",
