--- a/.eslintrc
+++ b/.eslintrc
@@ -23,7 +23,10 @@
     "@typescript-eslint/no-floating-promises": "off",
     "@typescript-eslint/no-unsafe-assignment": "off",
     "@typescript-eslint/no-unnecessary-condition": "off",
-    "@typescript-eslint/no-unused-vars": "warn"
+    "@typescript-eslint/no-unused-vars": "warn",
+    "jsx-a11y/control-has-associated-label": "warn",
+    "react/prop-types": "warn",
+    "react/no-children-prop": "warn"
   },
   "settings": {
     "react": {
